Završeno sve što je planirano

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="iznos">IZNOS</string>
     <string name="EURO">\u20ac</string>
     <string name="link">MFIN</string>
+    <string name="change">IZMIJENI</string>
 </resources>
